force-app/main/default/objects/Signature_Request__c/Signature_Request__c.object-meta.xml
<CustomObject>
    <label>Signature Request</label>
    <nameField>
        <displayFormat>SIG-{000000}</displayFormat>
        <label>Signature Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signature Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>