force-app/main/default/objects/Signature_Request__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>When the signature was completed</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>