force-app/main/default/objects/Signature_Request__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>When the signature request expires</description>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>