force-app/main/default/objects/Signature_Request__c/fields/External_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Case_ID__c</fullName>
    <description>External signature provider case/casefile ID</description>
    <externalId>true</externalId>
    <label>External Case ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>