force-app/main/default/objects/Signature_Request__c/fields/External_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Document_ID__c</fullName>
    <description>External signature provider document ID</description>
    <label>External Document ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>