force-app/main/default/objects/Signature_Request__c/fields/External_Signer_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Signer_ID__c</fullName>
    <description>External signature provider signer ID</description>
    <label>External Signer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>