force-app/main/default/objects/Signature_Request__c/fields/Journal__c.field-meta.xml
<CustomField>
    <fullName>Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal</label>
    <referenceTo>Journal__c</referenceTo>
    <relationshipLabel>Signature Requests</relationshipLabel>
    <relationshipName>Signature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>