force-app/main/default/objects/Signature_Request__c/fields/Market_Unit__c.field-meta.xml
<CustomField>
    <fullName>Market_Unit__c</fullName>
    <label>Market Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DFJ_DK</fullName>
            </value>
            <value>
                <fullName>FA_SE</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>