force-app/main/default/objects/Signature_Request__c/fields/Payload_Hash__c.field-meta.xml
<CustomField>
    <fullName>Payload_Hash__c</fullName>
    <description>SHA256 hash for signature provider job status polling</description>
    <label>Payload Hash</label>
    <length>100</length>
    <type>Text</type>
</CustomField>