force-app/main/default/objects/Signature_Request__c/fields/Shared_Document__c.field-meta.xml
<CustomField>
    <fullName>Shared_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shared Document</label>
    <referenceTo>Shared_Document__c</referenceTo>
    <relationshipLabel>Signature Requests</relationshipLabel>
    <relationshipName>Signature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>