force-app/main/default/objects/Signature_Request__c/fields/Signature_UUID__c.field-meta.xml
<CustomField>
    <fullName>Signature_UUID__c</fullName>
    <description>UUID returned by signature provider for job status polling</description>
    <label>Signature UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>