force-app/main/default/objects/Signature_Request__c/fields/Signed_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Signed_Document_ID__c</fullName>
    <description>ContentVersion ID of the signed PDF document</description>
    <label>Signed Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>