force-app/main/default/objects/Signature_Request__c/fields/Signer_Email__c.field-meta.xml
<CustomField>
    <fullName>Signer_Email__c</fullName>
    <description>Email of the person who will sign</description>
    <label>Signer Email</label>
    <type>Email</type>
</CustomField>