force-app/main/default/objects/Signature_Request__c/fields/Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Signer_Name__c</fullName>
    <description>Name of the person who will sign</description>
    <label>Signer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>