force-app/main/default/objects/Signature_Request__c/fields/Signing_Link__c.field-meta.xml
<CustomField>
    <fullName>Signing_Link__c</fullName>
    <description>URL for customer to sign the document</description>
    <label>Signing Link</label>
    <type>Url</type>
</CustomField>